Fixed TaskHierarchy double scroll issue
Fixes #27

--- a/src/components/Content/TaskHierarchy/TaskHierarchy.css
+++ b/src/components/Content/TaskHierarchy/TaskHierarchy.css
@@ -5,8 +5,7 @@
 
 #task-hierarchy-title {
   text-align: center;
-  padding-bottom: 18px;
-  margin: 8px 0;
+  margin: 8px 0 18px 0;
 }
 
 #task-hierarchy-title h2 {
